Fixing global notifications. word-break: normal and overflow:hidden is better.

--- a/packrat/styles/notifier.css
+++ b/packrat/styles/notifier.css
@@ -84,7 +84,8 @@
   font-style: italic;
   color: #fff;
   padding-right: 8px;
-  word-break: break-all;
+  word-break: normal;
+  overflow: hidden;
 }
 
 #kifi-notify-notice-wrapper .kifi-notify-image {
